# conglomerate

./: .cvsignore  .diffexclude  AUTHORS  BUGS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.xml  TODO  acconfig.h  autogen.sh  configure.ac  configure.in  conglomerate.doap  conglomerate.spec  conglomerate.spec.in  omf.make  xmldocs.make
SRS/: Readme
data/: .cvsignore  ChangeLog  Makefile.am  catalog  catalog.xml  conge.desktop.in  conglomerate.applications  conglomerate.desktop.in  conglomerate.keys.in  conglomerate.mime  conglomerate.schemas.in  docbook.css  selection-to-text.xsl
deb/: ChangeLog  Makefile.am  NEWS  README  Readme  build  changelog  conglomerate.menu  conglomerate.subvars  conglomerate_icon.xpm  control  copyright  polish  rules  watch
deb/patches/: 00list  00patch-opts  49_dont_install_generated_gtkdoc.dpatch  49_no_scrollkeeper-update.dpatch  ChangeLog  Makefile.am  P00000patch-stamp  P000doc-reference-Makefile.in  P000omf.make  P99999patch-stamp  README  package_version.dpatch
debian/: .cvsignore  ChangeLog  Makefile.am  NEWS  README  changelog  conglomerate-common.dirs  conglomerate-common.lintian-override  conglomerate-common.menu  conglomerate.dirs  conglomerate.linda-override  conglomerate.lintian-override  conglomerate.postinst  conglomerate.prerm  conglomerate_icon.xpm  control  copyright  rules
debian/patches/: 00list  4sarge  ChangeLog  Makefile.am  README  README.4sarge  README.release  next  (+6 more)
dispspecs/: .cvsignore  ChangeLog  Makefile.am  cnxml.xds  cnxml.xds.in  dispspec-template.xds  docbook.xds.in  forrest-document.xds.in  kernel-traffic-newsletter.xds.in  opml.xds  opml.xds.in  readme.xds  readme.xds.in  relax-ng.xds  relax-ng.xds.in  release.dtd  release.xds  teixlite.xds.in  validate-all-xds.sh  website-layout.xds  website-layout.xds.in  website-webpage.xds  website-webpage.xds.in  xds.dtd  xhtml1-strict.xds.in  xsl.xds  xsl.xds.in
doc/: ChangeLog  Makefile.am  activate.patch  conglomerate.1  conglomerate.omf.in
doc/C/: .cvsignore  ChangeLog  Makefile.am  README  cong_element_map_ref.xml  conglomerate-C.omf  conglomerate-refentry.xml  conglomerate.1  conglomerate.xml  conventions.xml  doc_type_support.xml  faq-hack.xsl  faq.xml  faq.xml.qna  global.ent  glossary.xml  manpage.make  notice_fdl.xml  notice_gpl.xml  row_xml_lang_attrib.xml  tbl_element_attrib.xml  xds_dtd_def.xml
doc/C/figures/: ChangeLog
doc/de/: de.po  de.po~
doc/devel/: ChangeLog  CompileIssues  Conglomerate-Overview.dia  ContribDemo  Documenting  Links  Makefile.am  README  VersionNumbering
doc/es/: es.po
doc/fr/: fr.po
doc/reference/: .cvsignore  ChangeLog  Makefile.am  README  conglomerate-docs.sgml  conglomerate-overrides.txt  conglomerate-sections.txt  conglomerate.types  conglomerate.types.bkp
doc/reference/tmpl/: dummy.sgml
doc/sl/: sl.po
documentation/: CodingStyle  CompileIssues  ContribDemo  Makefile.am  README  VersionNumbering  faq.xml
examples/: .cvsignore  ChangeLog  Makefile.am  cnxml.xds  cnxml.xml  dispspec-template.xds  dispspec.xds  dispspec.xds.in  docbook.xds  docbook.xds.in  error-proposal.xml  file-roller.xml  forrest-document.xds  forrest-document.xds.in  i18n.xml  kernel-traffic-newsletter.xds  kernel-traffic-newsletter.xds.in  nmtoken.xml  readme.ds  readme.xds  readme.xml  relax-ng.xds  teixlite.xds  test-docbook-to-html.xsl  test-docbook.xml  test-entities.xml  test-nesting.xml  test-table.xml  test-table2.xml  test-table3.xml  website-layout.xds  website-webpage.xds  xds.dtd  xhtml1-strict.xds  xhtml1-strict.xds.in  xsl.xds
examples/crash/: .cvsignore  ChangeLog  README  septentrio.xml  testcase-150368.xml  tester.batch
examples/crash/testcase-115226/: EDITION-FUNDAMENTAL  appen-certification.xml  appen-linux26.xml  certification.xml  essentials.xml  fundamentals-outline.xml  fundamentals.xml  history.xml  requirements.xml
glade/: ChangeLog  Makefile.am  cong-file-import.glade  cong-file-properties.glade  cong-find-replace.glade  cong-preferences.glade  custom-element.glade  docbook-common-properties.glade  docbook-orderedlist-properties.glade  docbook-ulink-properties.glade  plugin-arbitrary.glade  plugin-random.glade  string_selection_dialog.glade
pixmaps/: ChangeLog  Makefile.am  README  ilogo100.xpm
pixmaps/icons/: Makefile.am
pixmaps/icons/16x16/apps/: Makefile.am
pixmaps/icons/32x32/apps/: Makefile.am
pixmaps/icons/48x48/apps/: Makefile.am
pixmaps/icons/scalable/apps/: Makefile.am
po/: .cvsignore  ChangeLog  POTFILES.in  POTFILES.skip  ar.po  az.po  bg.po  ca.po  conglomerate.pot  cs.po  da.po  de.po  dummy  dz.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fr.po  gl.po  hr.po  ja.po  nb.po  ne.po  nl.po  no.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  rw.po  sl.po  sq.po  sr.po  sr@Latn.po  sv.po  tr.po  (+2 more)
src/: .cvsignore  ChangeLog  Makefile  Makefile.am  Makefile.win  README  auth_off.c  auth_on.c  cong-app.c  cong-app.h  cong-attribute-editor-cdata.c  cong-attribute-editor-cdata.h  cong-attribute-editor-enumeration.c  cong-attribute-editor-enumeration.h  cong-attribute-editor-lang.c  cong-attribute-editor-lang.h  cong-attribute-editor-nmtoken.c  cong-attribute-editor-nmtoken.h  cong-attribute-editor.c  cong-attribute-editor.h  cong-attribute-wrapper-check-button.c  cong-attribute-wrapper-check-button.h  cong-attribute-wrapper-radio-button.c  cong-attribute-wrapper-radio-button.h  cong-attribute-wrapper.c  cong-attribute-wrapper.h  cong-command-history.c  cong-command-history.h  cong-command.c  cong-command.h  cong-debug-log-view.c  cong-dialog.c  cong-dialog.h  cong-dispspec-element-gxx.h  cong-dispspec-element.c  cong-dispspec-element.h  cong-dispspec-gxx.h  cong-dispspec-registry.c  cong-dispspec-registry.h  cong-dispspec.c  (+319 more)
src/recent-files/: Makefile.am  egg-recent-view-uimanager.c
templates/: ChangeLog  Makefile.am  dispspec-template.xds  dispspec.xml  html.xml
uss/: ChangeLog  README  autogen.sh  ckgtkdocincludes  gengtkdoctypes  genreadme  mkcvstarball  mkgtkdoc  mkgtkdocoverrides  mkgtkdocsections  mkgtkdoctypes  mkpotfilesin  sync  updateconfigsubguess  wgetspec
