SUBDIRS = devel reference

include $(top_srcdir)/gnome-doc-utils.make

dist-hook: doc-dist-hook

DOC_MODULE = conglomerate

DOC_ENTITIES = \
cong_element_map_ref.xml \
conglomerate-refentry.xml  \
conventions.xml \
doc_type_support.xml \
faq.xml \
global.ent \
glossary.xml \
notice_fdl.xml \
notice_gpl.xml \
row_xml_lang_attrib.xml \
tbl_element_attrib.xml \
xds_dtd_def.xml

DOC_INCLUDES = 

DOC_FIGURES = \
figures/caution.png \
figures/cong_create_new_file_wiz1.png \
figures/cong_create_new_file_wiz2.png \
figures/cong_dump_xds_dialog.png \
figures/cong_editor_outlineview_overview.png \
figures/cong_editor_outlineview_popup_menu.png \
figures/cong_editor_outlineview_raw.png \
figures/cong_editor_window_doc_area.png \
figures/cong_editor_window_doc_edit_collapse.png \
figures/cong_editor_window_doc_edit.png \
figures/cong_editor_window_menubar.png \
figures/cong_editor_window.png \
figures/cong_editor_window_statusbar.png \
figures/cong_editor_window_titlebar.png \
figures/cong_editor_window_toolbar.png \
figures/cong_edit_xds_dialog.png \
figures/cong_export_file_dialog.png \
figures/cong_import_file_dialog.png \
figures/cong_inline_menu.png \
figures/cong_input_focus.png \
figures/conglomerate_logo.png \
figures/cong_open_dialog.png \
figures/cong_properties_dialog_add.png \
figures/cong_properties_dialog_dtd_add.png \
figures/cong_properties_dialog_dtd_adv_add.png \
figures/cong_properties_dialog_dtd_adv.png \
figures/cong_properties_dialog_dtd.png \
figures/cong_properties_dialog_dtd_reder.png \
figures/cong_properties_dialog_lang.png \
figures/cong_properties_dialog_rev.png \
figures/cong_properties_dialog_scope.png \
figures/cong_save_as_dialog.png \
figures/cong_save_copy_dialog.png \
figures/cong_start_window.png \
figures/cong_validate_tool_dialog.png \
figures/cong_view_source_menu.png \
figures/cong_view_source_window.png \
figures/important.png \
figures/intro.png \
figures/menu-properties.png \
figures/new-doc-wizard.png \
figures/new.png \
figures/note.png \
figures/properties-dialog.png \
figures/quote.png \
figures/tip.png \
figures/warning.png

DOC_LINGUAS = C de es fr sl
