exampledir 	 = $(datadir)/conglomerate/examples
example_DATA 	 = \
	cnxml.xml \
	error-proposal.xml \
	file-roller.xml \
	i18n.xml \
	readme.xml \
	test-docbook.xml \
	test-entities.xml \
	test-table.xml

dispspecdir 	 = $(pkgdatadir)/conglomerate/dispspecs
dispspec_DATA 	 = \
	cnxml.xds \
	dispspec.xds \
	docbook.xds \
	kernel-traffic-newsletter.xds \
	readme.xds \
	relax-ng.xds \
	website-layout.xds \
	website-webpage.xds \
	xhtml1-strict.xds \
	xsl.xds

# bugzilla #122011
dtddir 	 = $(datadir)/conglomerate/dtd
dtd_DATA	= xds.dtd

EXTRA_DIST = $(example_DATA)	\
	$(dtd_DATA)	\
	$(dispspec_DATA)			

