NULL =
exampledir 	 = $(datadir)/conglomerate/examples
example_DATA 	 = \
	cnxml.xml \
	error-proposal.xml \
	file-roller.xml \
	i18n.xml \
	nmtoken.xml \
	readme.xml \
	test-docbook.xml \
	test-entities.xml \
	test-table.xml \
	test-table3.xml \
	$(NULL)

#@INTLTOOL_XML_RULE@

EXTRA_DIST = $(example_DATA)

-include $(top_srcdir)/git.mk
