gladedir 	 = $(pkgdatadir)/glade
glade_DATA 	 = docbook-common-properties.glade \
                   docbook-orderedlist-properties.glade \
                   docbook-ulink-properties.glade \
		   string_selection_dialog.glade \
                   cong-file-import.glade \
                   cong-file-properties.glade \
                   cong-find-replace.glade \
                   cong-preferences.glade \
                   plugin-arbitrary.glade \
                   plugin-random.glade \
                   custom-element.glade

EXTRA_DIST = $(glade_DATA)


-include $(top_srcdir)/git.mk
