dtidir = $(datadir)/pixmaps
dti_DATA = conglomerate-icon-16.png

# application icons
#appiconsdir = $(pkgdatadir)/icons
#appiconsdir = $(datadir)/conglomerate/icons
# this is work in progress by GSt
appiconsdir = $(datadir)/pixmaps
appicons_DATA = \
	cong-docbook-set-16.png \
	cong-docbook-book-16.png \
	cong-docbook-article-16.png \
	cong-metadata-16.png \
	cong-title-16.png \
	cong-wrapper-16.png \
	cong-author-16.png \
	cong-editor-16.png \
	cong-publisher-16.png \
	cong-name-16.png \
	cong-address-16.png \
	cong-history-16.png \
	cong-paragraph-16.png \
	cong-faq-16.png \
	cong-question-16.png \
	cong-answer-16.png \
	cong-bibliography-16.png \
	cong-entry-16.png \
	cong-footnote-16.png \
	cong-subsection-16.png \
	cong-indexterm-16.png \
	cong-summary-16.png \
	cong-list-16.png \
	cong-bulleted-list-16.png \
	cong-numbered-list-16.png \
	cong-list-item-16.png \
	cong-definition-list-16.png \
	cong-code-fragment-16.png

EXTRA_DIST = $(dti_DATA) $(appicons_DATA)
